# plshelp

./: .gitignore  Cargo.toml  README.md  plshelp.db  wrangler.toml
.github/: README.md
.github/workflows/: README.md  release.yml
.plshelp_live_test/fixtures/: numpy-user.md
.plshelp_test/fixtures/: numpy-ref.txt
.plshelp_test/home/.config/plshelp/: config.toml
docs/: acme.txt
npm/plshelp/: install.js  package.json  run.js
npm/plshelp-darwin-arm64/: package.json
npm/plshelp-linux-x64/: package.json
npm/plshelp-win32-x64/: package.json
registry/: README.md  sources.json
registry/builder/: README.md
registry/builder/src/: README.md
registry/docs/: README.md
scripts/: README.md  install.ps1  install.sh
site/: README.md
site/public/: README.md  docs.html  index.html  install.ps1  install.sh  registry.html
site/public/registry/: index.json
site/public/registry/.wrangler/cache/: cf.json
site/registry/: sources.json
site/registry/builder/: Cargo.toml
site/registry/builder/src/: main.rs
site/src/: README.md
src/: artifacts.rs  chunk.rs  cli.rs  commands.rs  crawl.rs  db.rs  embed.rs  lib.rs  libraries.rs  main.rs  plshelp.db  runtime.rs  ui.rs
