[package]
name = "deep-spider"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
fastembed = "5.11.0"
hashbrown = "0.16.1"
html2md = "0.2.15"
rayon = "1.11.0"
regex = "1.12.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sentencex = "0.1.13"
spider = { version = "2.45.19", features = ["regex"] }
termios = "0.3.3"
toml = "0.8.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"
